Add lobby manager system. Require map on game creation.
