# docs/api_spec_oas3.yml
@@ -1,16 +1,38 @@
 openapi: 3.0.0
 info:
-  version: 0.1.0
+  version: 0.2.0
   title: Cyber Wars API
 servers:
 - url: No Production URL yet
 paths:
+  /maps:
+    get:
+      summary: Get all maps
+      operationId: getMaps
+      tags:
+      - lobby
+      responses:
+        '200':
+          description: 'The list of playable maps'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Maps'
   /game:
     post:
       summary: Create a game
       operationId: createGame
       tags:
       - lobby
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                mapId:
+                  type: string
+                  format: uuid
       responses:
         '200':
           description: 'The meta information about a game, including map tile data.'
@@ -18,6 +40,24 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Game'
+        '400':
+          description: The map id was not provided.
+        '404':
+          description: The map could not be found.
+      callbacks:
+        lobbyManagerGameProvision:
+          'http://lobby/manager/url':
+            post:
+              headers:
+                X-Signature:
+                  description: Lowecase hex of the SHA256 HMAC of the body with the service's pre shared secret.
+                  schema:
+                    type: string
+              requestBody:
+                required: true
+                content:
+                  application/json:
+                    $ref: '#/components/schemas/Game'
   '/game/{gameId}':
     get:
       summary: Get a specific game you know the ID for.
@@ -224,6 +264,29 @@ paths:
           description: The turn or unit could not be found.
 components:
   schemas:
+    Map:
+      required:
+      - id
+      - numberOfPlayers
+      - lobbyService
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+          example: 602aff3a-5427-48d5-9865-6cb92bcbef54
+        numberOfPlayers:
+          type: integer
+          format: int32
+          example: 1
+          minimum: 1
+        lobbyService:
+          type: string
+          example: "CyberWars Player Lobby"
+    Maps:
+      type: array
+      items:
+        $ref: '#/components/schemas/Map'
     Game:
       required:
       - id
